// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`globalActions #displayCellInputter sets data for cell inputter 1`] = `
Object {
  "entered": "=5+3",
  "location": "B-2",
}
`;

exports[`globalActions #displayCellInputter sets data for cell inputter 2`] = `
Object {
  "entered": "=5+3",
  "location": "B-2",
}
`;

exports[`globalActions #setActiveCell sets currently active cell 1`] = `
Object {
  "entered": "",
  "location": "B-2",
}
`;
